[metadata]
name = GitHub User Activity
version = attr: user_activity.__version__
author = Mustapha EL KAMILI
	    Programming Language :: Python :: 3.12

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.12
packages = find:
test_suite = tests
setup_requires =
    pytest-runner >=3.9.2

install_requires =
    requests >= 2.32.3
    pylint >= 3.2.7
    ruff >= 0.7.0

[options.entry_points]
console_scripts =
    github-activity = user_activity:run
